--- a/theme-ESGI/style.css
+++ b/theme-ESGI/style.css
@@ -439,6 +439,7 @@ h2 + p {
 @media screen and (max-width: 700px) {
   .flex-row {
     flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -595,6 +596,7 @@ h2 + p {
   margin-bottom: 7.25rem;
   margin-top: 6.5rem;
   justify-content: end;
+  align-items: end;
   margin-right: 7.5rem;
   gap: 4.5rem;
   text-align: end;
